2011-11-30  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/calendar/folder-handler.js
	(CalendarHandler.addDirectories): pass "true" as value to the new
	"useCache" parameter to calCalendarManager.registerCalendar.

2011-11-14  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/messenger/folders-update.js
	(directoryChecker.checkAvailability): made asynchronous to avoid
	blocking the network thread.

2011-03-08  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/calendar/calendar-overlay.js
	(openCalendarUnsubscriptionDialog): Fixed typo in function named
	and included confirmation code from calendar-common-sets.js for
	unsubscriptions.

	* chrome/content/calendar/calendar-common-sets.{js,xul}: removed
	obsolete files.

	* chrome/content/general/creation-utils.js
	(createOperation.onMkColQueryComplete): the display name must be
	passed through xmlEscape().

2010-11-16  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/addressbook/folder-handler.js:
	(AddressbookHandler._moveAddressBook): add cloned versions of the
	cards to avoid raising their reference count, which otherwise
	prevents their proper deletion.

2010-11-03  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/addressbook/folder-handler.js:
	(AddressbookHandler._moveAddressBook): new method, derived from
	sogo-connector's previous SCCopyAddressBook method, with added
	code to remove copied cards.
	(AddressbookHandler._ensureFolderIsremote): invoke
	_moveAddressBook so that cards are deleted, even though we
	expected the addressbook file to be properly deleted instead...

2010-10-29  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/addressbook/categories.js:
	(SIContactCategories.synchronizeFromServer): test
	propstat["prop"][0] to avoid an exception with servers that do not
	support the "contacts-categories" property.

2010-10-27  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* chrome/content/messenger/folders-update.js: trigger the